# legit-py

./: .gitignore  README.md  backend.Dockerfile  docker-compose.yml  pyproject.toml
env/: .env
src/: main.py
src/api/: app.py
src/api/routers/: realms.py
src/utils/: client.py  consts.py  logs.py  settings.py
