[project]
name = "legit-py"
version = "0.1.0"
description = "KeyCloak API Project"
authors = [
    {name = "Sagi Sarussi", email = "me@sagis.dev"},
]
dependencies = [
    "requests>=2.28.2",
    "fastapi>=0.89.1",
    "uvicorn[all]>=0.20.0",
    "structlog>=22.3.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
start = "python3 src/main.py"
# start = "uvicorn app.main:app --port 8080"
# start_dev = "pdm run start -- --reload"
